Player UI is now only displayed once all sizes and css are correctly set. This prevents the initial 'broken UI' look on page load.

--- a/css/player.css
+++ b/css/player.css
@@ -803,10 +803,10 @@ body, html {
   background-image: url(../images/loading.gif);
   width: 32px;
   height: 32px;
+  top: 0px;
+  left: 0px;
   position: absolute;
   display: none;
-  margin-left: auto;
-  margin-right: auto;
   z-index: 10;
 }
 
